# django_course_work

./: pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_list.html
config/: settings.py  urls.py
mail_server/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
mail_server/commands/: send_emails.py
mail_server/migrations/: 0001_initial.py
mail_server/templates/mail_server/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  distribution_confirm_delete.html  distribution_detail.html  distribution_form.html  distribution_list.html  home.html  letter_confirm_delete.html  letter_detail.html  letter_form.html  letter_list.html  try_letter_detail.html  try_letter_list.html
users/: models.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_is_verified_and_more.py
